@@ -235,6 +235,7 @@ test -n "$pic" && pic="$pic -S"
 AC_PATH_PROG(gzip, gzip)
 if test -n "$gzip"
 then
+	AC_DEFINE(HAVE_GZIP, 1, [Define if you have gzip.])
 	gunzip="$gzip -dc"
 	compressor="$gzip -c7"
 	compress_ext="gz"
@@ -243,6 +244,7 @@ fi
 AC_PATH_PROG(compress, compress)
 if test -n "$compress"
 then
+	AC_DEFINE(HAVE_COMPRESS, 1, [Define if you have compress.])
 	uncompress="$compress -dc"
 	if test -z "$gzip"
 	then
@@ -254,6 +256,7 @@ fi
 AC_PATH_PROG(bzip2, bzip2)
 if test -n "$bzip2"
 then
+	AC_DEFINE(HAVE_BZIP2, 1, [Define if you have bzip2.])
 	bunzip2="$bzip2 -dc"
 fi
 if test -n "$gzip" || test -n "$compress" || test -n "$bzip2"
